--- a/src/GstarCAD.Extensions.Geometry.csproj
+++ b/src/GstarCAD.Extensions.Geometry.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net40;net48</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Sharper.GstarCAD.Extensions.Geometry</RootNamespace>
+    <AssemblyName>Sharper.GstarCAD.Extensions.Geometry</AssemblyName>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -10,9 +11,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Condition="'$(TargetFramework)' == 'net40'" Include="GstarCADNET" Version="[17.2,20)" ExcludeAssets="runtime"/>
-    <PackageReference Condition="'$(TargetFramework)' == 'net48'" Include="GstarCADNET" Version="[20,24)" ExcludeAssets="runtime"/>
-    <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" PrivateAssets="All"/>
+  <ItemGroup Condition="!$(DefineConstants.Contains('GSTARCADGREATERTHAN24'))">
+    <PackageReference Include="Sharper.GstarCAD.Extensions" Version="[2023.1,2024)" />
+  </ItemGroup>
+  <ItemGroup Condition="$(DefineConstants.Contains('GSTARCADGREATERTHAN24'))">
+    <PackageReference Include="Sharper.GstarCAD.Extensions" Version="[2024.4,)" />
   </ItemGroup>
 </Project>
